// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders correctly with advanced header 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-185fwsd-BorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 24px;
}

.cache-185fwsd-BorderedBox[data-isActive='true'] {
  border: 1px solid #390171;
}

.cache-185fwsd-BorderedBox[data-disabled='true'] {
  border: 1px solid #d4dae7;
}

<div
    class="cache-13y4eb8-Stack-StyledStack eopu40d1"
    data-disabled="false"
  >
    <h2>
      Advanced Title
    </h2>
    <div
      class="cache-185fwsd-BorderedBox eopu40d0"
      data-disabled="false"
      data-isactive="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with className 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-185fwsd-BorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 24px;
}

.cache-185fwsd-BorderedBox[data-isActive='true'] {
  border: 1px solid #390171;
}

.cache-185fwsd-BorderedBox[data-disabled='true'] {
  border: 1px solid #d4dae7;
}

<div
    class="test cache-13y4eb8-Stack-StyledStack eopu40d1"
    data-disabled="false"
  >
    <div
      class="cache-185fwsd-BorderedBox eopu40d0"
      data-disabled="false"
      data-isactive="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with data-testid 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-185fwsd-BorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 24px;
}

.cache-185fwsd-BorderedBox[data-isActive='true'] {
  border: 1px solid #390171;
}

.cache-185fwsd-BorderedBox[data-disabled='true'] {
  border: 1px solid #d4dae7;
}

<div
    class="cache-13y4eb8-Stack-StyledStack eopu40d1"
    data-disabled="false"
    data-testid="test"
  >
    <div
      class="cache-185fwsd-BorderedBox eopu40d0"
      data-disabled="false"
      data-isactive="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with disabled 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-185fwsd-BorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 24px;
}

.cache-185fwsd-BorderedBox[data-isActive='true'] {
  border: 1px solid #390171;
}

.cache-185fwsd-BorderedBox[data-disabled='true'] {
  border: 1px solid #d4dae7;
}

<div
    class="cache-13y4eb8-Stack-StyledStack eopu40d1"
    data-disabled="true"
  >
    <div
      class="cache-185fwsd-BorderedBox eopu40d0"
      data-disabled="true"
      data-isactive="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with disabled and header 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-rtl51n-StyledText {
  color: #c4c9d6;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-185fwsd-BorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 24px;
}

.cache-185fwsd-BorderedBox[data-isActive='true'] {
  border: 1px solid #390171;
}

.cache-185fwsd-BorderedBox[data-disabled='true'] {
  border: 1px solid #d4dae7;
}

<div
    class="cache-13y4eb8-Stack-StyledStack eopu40d1"
    data-disabled="true"
  >
    <h2
      class="cache-rtl51n-StyledText e1tg3t120"
    >
      Title
    </h2>
    <div
      class="cache-185fwsd-BorderedBox eopu40d0"
      data-disabled="true"
      data-isactive="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with header 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-r5s8ej-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-185fwsd-BorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 24px;
}

.cache-185fwsd-BorderedBox[data-isActive='true'] {
  border: 1px solid #390171;
}

.cache-185fwsd-BorderedBox[data-disabled='true'] {
  border: 1px solid #d4dae7;
}

<div
    class="cache-13y4eb8-Stack-StyledStack eopu40d1"
    data-disabled="false"
  >
    <h2
      class="cache-r5s8ej-StyledText e1tg3t120"
    >
      Title
    </h2>
    <div
      class="cache-185fwsd-BorderedBox eopu40d0"
      data-disabled="false"
      data-isactive="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly with isActive 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-185fwsd-BorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 24px;
}

.cache-185fwsd-BorderedBox[data-isActive='true'] {
  border: 1px solid #390171;
}

.cache-185fwsd-BorderedBox[data-disabled='true'] {
  border: 1px solid #d4dae7;
}

<div
    class="cache-13y4eb8-Stack-StyledStack eopu40d1"
    data-disabled="false"
  >
    <div
      class="cache-185fwsd-BorderedBox eopu40d0"
      data-disabled="false"
      data-isactive="true"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card renders correctly without header 1`] = `
<DocumentFragment>
  .cache-13y4eb8-Stack-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-13y4eb8-Stack-StyledStack[data-disabled='true'] {
  cursor: not-allowed;
}

.cache-185fwsd-BorderedBox {
  border: 1px solid #e6e9f0;
  border-radius: 4px;
  padding: 24px;
}

.cache-185fwsd-BorderedBox[data-isActive='true'] {
  border: 1px solid #390171;
}

.cache-185fwsd-BorderedBox[data-disabled='true'] {
  border: 1px solid #d4dae7;
}

<div
    class="cache-13y4eb8-Stack-StyledStack eopu40d1"
    data-disabled="false"
  >
    <div
      class="cache-185fwsd-BorderedBox eopu40d0"
      data-disabled="false"
      data-isactive="false"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
